I fixed the image so it bleeds completely from edge to edge

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ a:link, a:visited {
 body {
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
+    margin: -15px -10px 0px -10px;
 }
 
 
